[package]
name = "wave_rush"
version = "0.1.0"
authors = ["OhhhZenix <33815423+OhhhZenix@users.noreply.github.com>"]
edition = "2018"
build = "scripts/build.rs"

[features]
profile = ["puffin", "puffin_egui", "egui-macroquad"]

[build-dependencies]
fs_extra = "1.2.0"

[dependencies]
macroquad = "0.3.7"
specs = "0.17.0"
rand = "0.8.4"
rayon = "1.5.1"
puffin = { version = "0.6.0", optional = true }
puffin_egui = { version = "0.4.1", optional = true }
egui-macroquad = { version = "0.5.0", optional = true }
stdext =  "0.3.1"