[package]
name = "wave_rush"
version = "0.1.0"
authors = ["OhhhZenix <33815423+OhhhZenix@users.noreply.github.com>"]
edition = "2021"
build = "scripts/build.rs"

[build-dependencies]
fs_extra = "1.2.0"

[dependencies]
macroquad = "0.3.7"
hecs = "0.7.3"
rand = "0.8.4"
rayon = "1.5.1"
pollster = "0.2.4"